force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/clofor_com_cfs__LoadLocation__c.object-meta.xml
<CustomObject>
    <customHelpPage>clofor_com_cfs__page_WarehouseOnlineHelp</customHelpPage>
    <description>Warehouse (Load Location)</description>
    <label>CFS・CY・DEPOT</label>
    <nameField>
        <label>WAREHOUSE NAME</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>