force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/fields/clofor_com_cfs__DOtype__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__DOtype__c</fullName>
    <label>D/O METHOD</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>D/Oless</fullName>
            </value>
            <value>
                <fullName>D/O ORIGINAL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>