force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/fields/clofor_com_cfs__LoadAddress_English__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadAddress_English__c</fullName>
    <label>WAREHOUSE ADDRESS (ENG)</label>
    <type>TextArea</type>
</CustomField>