force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/fields/clofor_com_cfs__LoadFAX__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadFAX__c</fullName>
    <label>FAX</label>
    <type>Phone</type>
</CustomField>