force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/fields/clofor_com_cfs__LoadLocation_english__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadLocation_english__c</fullName>
    <label>WAREHOUSE NAME(ENG)</label>
    <type>TextArea</type>
</CustomField>