force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/fields/clofor_com_cfs__LoadLocationID__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadLocationID__c</fullName>
    <displayFormat>WR-{00000}</displayFormat>
    <label>WAREHOUSE REGISTERED ID</label>
    <type>AutoNumber</type>
</CustomField>