force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/fields/clofor_com_cfs__LoadLocationPIC__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadLocationPIC__c</fullName>
    <label>PIC OF WAREHOUSE</label>
    <type>TextArea</type>
</CustomField>