force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/fields/clofor_com_cfs__LoadTEL__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__LoadTEL__c</fullName>
    <label>TEL</label>
    <type>Phone</type>
</CustomField>