force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/fields/clofor_com_cfs__NACCS__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__NACCS__c</fullName>
    <label>WAREHOUSE CODE IN CUSTOMS OFFICE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>