force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/fields/clofor_com_cfs__others__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__others__c</fullName>
    <label>REMARK</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>