force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/fields/clofor_com_cfs__Remarks__c.field-meta.xml
<CustomField>
    <fullName>clofor_com_cfs__Remarks__c</fullName>
    <label>Remarks(AN)</label>
    <type>TextArea</type>
</CustomField>