force-app/main/default/objects/clofor_com_cfs__LoadLocation__c/listViews/clofor_com_cfs__All.listView-meta.xml
<ListView>
    <fullName>clofor_com_cfs__All</fullName>
    <columns>NAME</columns>
    <columns>clofor_com_cfs__LoadLocation_english__c</columns>
    <columns>clofor_com_cfs__LoadLocationID__c</columns>
    <columns>clofor_com_cfs__WharehouseCompany__c</columns>
    <columns>clofor_com_cfs__LoadLocationPIC__c</columns>
    <columns>clofor_com_cfs__LoadTEL__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>clofor_com_cfs__Remarks__c</columns>
    <columns>clofor_com_cfs__LoadAddress_English__c</columns>
    <filterScope>Everything</filterScope>
    <label>all</label>
    <language>en_US</language>
</ListView>